# task-buddy-nexus

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .env  alembic.ini  create_tables.sql  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_image_url_to_services.py  create_project_tables.py  f9334969cfe7_add_user_role.py
backend/app/: database.py  main.py  schemas.py
backend/app/core/: auth.py  file_upload.py
backend/app/models/: base.py
backend/app/routers/: auth.py  jobs.py  messages.py  services.py
frontend/mobile/: Untitled-1.json  package-lock.json  package.json
frontend/mobile/app/: [...missing].tsx  _layout.tsx  about.tsx  addSkills.tsx  adminDashboard.tsx  adminSidebar.tsx  categoryFilter.tsx  clientDashboard.tsx  clientSidebar.tsx  contractorDashboard.tsx  dashboard.tsx  entry.js  footer.tsx  index.tsx  jobassignemtpage.tsx  jobcard.tsx  jobs.tsx  jobsgrid.tsx  layout.tsx  login.tsx  managejob.tsx  manageservices.tsx  manageusers.tsx  messages.tsx  navbar.tsx  notfound.tsx  notifications.tsx  profile.tsx  profileheader.tsx  (+15 more)
src/: App.tsx  index.css  main.tsx
src/components/: Footer.tsx  Navbar.tsx
src/contexts/: AuthContext.tsx
src/data/: mockServices.ts
src/lib/: api.ts
src/pages/: About.tsx  AdminDashboard.tsx  ClientDashboard.tsx  ContractorDashboard.tsx  Dashboard.tsx  Index.tsx  Jobs.tsx  Login.tsx  Messages.tsx  NotFound.tsx  Profile.tsx  Register.tsx  ServiceDetailPage.tsx  Services.tsx  ServicesPage.tsx
src/redux/: store.ts  types.ts
(+36 files in other folders)
